@@ -8,6 +8,7 @@ New features:
 - 2980820 Indication Profile 1.1: New attr values.
 - 2990169 Bump downloaded CIM schema to 2.25
 - 2980524 providerRegister should collate namespaces
+- 2994969 Persist failing indications
 
 Bugs fixed:
 - 2952616 internalProvider is not Threadsafe
